## This is a automake file, part of Unidata's netCDF package.
# Copyright 2011, see the COPYRIGHT file for more information.

# If the user is building the F90 API, build the F90 examples.
if BUILD_F90
F90_DIR = F90
endif

# These are the subdirectories that will be built. 
SUBDIRS = F77 $(F90_DIR)
