## This is an automake file, part of Unidata's netCDF package.
# Copyright 2005-2019, see the COPYRIGHT file for more information.

# This builds the nfconfig.inc include file.

# Ed Hartnett

# Tell make to install these as a header file.
#noinst_HEADERS = nfconfig.inc

# The nfconfig.in file is turned into nfconfig.inc by the configure
# script. The man page is generated on the developers machine for the
# dist.
EXTRA_DIST =   CMakeLists.txt


# These files need to be cleaned up my make.
CLEANFILES = nfconfig1.inc
DISTCLEANFILES = nfconfig.inc
